css/style.css
/* ... */
.navbar-links {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-preferred-size: 100%;
      flex-basis: 100%;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  max-width: 400px;
}

.navbar-link {
  padding: 15px 0 10px 0;
  min-width: 120px;
  text-align: center;
  font-size: 18px;
  color: #fff;
  font-family: BPG Nino Mtavruli Bold, sans-serif;
}

.navbar-link:hover {
  color: rgba(255, 255, 255, 0.8);
}

.navbar-anchors {
  z-index: 98;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  margin-top: -45px;
  width: 100%;
  background: -webkit-gradient(linear, left top, right top, from(rgba(150, 0, 198, 0.8)), color-stop(20%, rgba(181, 0, 197, 0.8)), to(rgba(255, 161, 38, 0.8)));
  background: linear-gradient(90deg, rgba(150, 0, 198, 0.8) 0%, rgba(181, 0, 197, 0.8) 20%, rgba(255, 161, 38, 0.8) 100%);
  -webkit-transition: 1.5s;
  transition: 1.5s;
}

.navbar-anchors-container {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.navbar-anchors-show {
  -webkit-transform: translateY(100%);
          transform: translateY(100%);
  -webkit-transition: .5s;
  transition: .5s;
}

/* Landscape phones and portrait tablets */
@media screen and (max-width: 767px) {
  .logo-img {
    height: 35px;
  }
}

@media screen and (max-width: 480px) {
  .logo {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    padding: 0 20px;
    height: 60px;
  }
  .logo-img {
    height: 30px;
  }
  .logo-menu {
    display: none;
  }
  .logo-menu-colored {
    display: block;
    width: 40px;
    height: 40px;
    background: url("/img/menu_colored.svg");
    background-size: cover;
  }
  .logo-menu-colored-close {
    background: url("/img/close.svg");
    background-size: cover;
  }
  .logo-search {
    display: none;
  }
  .logo-search-colored {
    display: block;
    margin: 0;
    padding: 0;
    width: 40px;
    height: 40px;
    border: none;
    background: url("/img/search_colored.svg");
    background-size: cover;
  }
  .logo-hr {
    position: absolute;
    bottom: -1px;
    left: 0;
    display: block;
    margin: 0;
    width: 100%;
    height: 1px;
    border: none;
    background: -webkit-gradient(linear, left top, right top, from(#9600c6), color-stop(20%, #b500c5), to(#ffa126));
    background: linear-gradient(90deg, #9600c6 0%, #b500c5 20%, #ffa126 100%);
  }
  .navbar {
    z-index: 98;
    position: fixed;
    top: 60px;
    left: 0;
    height: auto;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
    -webkit-transform: translateY(-100%);
            transform: translateY(-100%);
    -webkit-transition: .5s;
    transition: .5s;
  }
  .navbar-container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .navbar-links {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    width: 100%;
  }
  .navbar-link {
    padding: 15px 0 10px 0px;
    width: 100%;
    text-align: center;
  }
  .navbar-show {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
  .navbar-anchors {
    display: none;
  }
}

footer {
  z-index: 1;
  padding: 15px 10px 10px 10px;
  text-align: center;
  font-size: 18px;
  color: #fff;
  background: -webkit-gradient(linear, left top, right top, from(#9600c6), color-stop(20%, #b500c5), to(#ffa126));
  background: linear-gradient(90deg, #9600c6 0%, #b500c5 20%, #ffa126 100%);
  font-family: BPG Nino Mtavruli Bold, sans-serif;
}

.search {
  z-index: 98;
  position: fixed;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: 100%;
  background-color: #fff;
  -webkit-transform: translateY(-150%);
          transform: translateY(-150%);
  -webkit-transition: .5s;
  transition: .5s;
  overflow-y: hidden;
}

.search-article {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  padding: 40px 0;
  width: 100%;
  background-color: #ffa12625;
}

.search-container {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  width: 100%;
}

.search-bar {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.search-bar-input {
  margin: 0 auto;
  padding: 10px 40px 8px 40px;
  width: 100%;
  height: 60px;
  border: 1px solid #9600C6;
  border-radius: 20px;
  font-family: BPG Nino Mtavruli, sans-serif;
}

.search-bar-clear {
  position: absolute;
  top: 20px;
  right: 20px;
  display: block;
  width: 40px;
  height: 40px;
  background: url("/img/close.svg");
  background-size: cover;
}

.search-section {
  display: none;
}

.search-section-item {
  margin: 10px 0;
  font-family: BPG Nino Mtavruli, sans-serif;
}

.search-section-nomatch {
  text-align: center;
  font-family: BPG Nino Mtavruli, sans-serif;
}

.search-section-show {
  display: block;
}
/* ... */

